alexbeltran.dev/resume-service.yml
apiVersion: v1
kind: Service
metadata:
  name: resume
  labels:
    app: resume
spec:
  type: NodePort
  ports:
  - port: 8000
    nodePort: 30001
  selector:
    app: resume
