alexbeltran.dev/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app: website
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30000
  selector:
    app: website
