alexbeltran.dev/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - alexbeltran.dev
    secretName: alexbeltran.dev
  rules:
  - host: alexbeltran.dev
    http:
      paths:
      - path: /senior-design/
        pathType: Prefix
        backend:
          service:
            name: senior-design
            port:
              number: 80
      - path: /Alex-Beltran-Resume.pdf
        pathType: Exact
        backend:
          service:
            name: resume
            port:
              number: 8000
      - path: /ML-Antimicrobial-Stewardship.pdf
        pathType: Exact
        backend:
          service:
            name: resume
            port:
              number: 8000
      - path: /Evaluating-Clinical-Prediction-Indices.pdf
        pathType: Exact
        backend:
          service:
            name: resume
            port:
              number: 8000
      - path: /_next/
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
      - path: /images/
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
      - path: /favicon.ico
        pathType: Exact
        backend:
          service:
            name: website
            port:
              number: 80
      - path: /
        pathType: Exact
        backend:
          service:
            name: website
            port:
              number: 80
